<resources>
    <string name="app_name">UpgradeAll</string>
    <string name="help">帮助</string>
    <string name="update">更新</string>
    <string name="backup">备份</string>
    <string name="restore">恢复</string>
    <string name="app_list">软件列表</string>
    <string name="user_star">星标</string>
    <string name="all_app">全部应用</string>
    <string name="app">软件</string>
    <string name="magisk_module">Magisk 模块</string>
    <string name="app_hub">软件源</string>
    <string name="add">添加</string>
    <string name="desc">网址</string>
    <string name="name">名称</string>
    <string name="package_id">跟踪目标</string>
    <string name="basic_info">基础信息</string>
    <string name="versioning_check_setting">版本控制设置</string>
    <string name="test">测试</string>
    <string name="delete">删除</string>
    <string name="delete_from_group">从分组中删除</string>
    <string name="restore_default_icon">还原默认图标</string>
    <string name="export">导出</string>
    <string name="edit">编辑</string>
    <string name="initiative_sync_time">数据过期时间(min)</string>
    <string name="background_sync_time">后台数据刷新时间(h)</string>
    <string name="background_sync_time_desc">软件在后台检查更新的周期\n若周期为0，则禁用后台更新检查</string>
    <string name="changelog">更新日志</string>
    <string name="latest_release_file">最新版本的云端文件</string>
    <string name="renewing">正在刷新</string>
    <string name="cloud_rules">云规则</string>
    <string name="cloud_rules_repo_url">Git 仓库地址</string>
    <string name="update_server_url">升级服务 URL</string>
    <string name="menu_search">搜索</string>
    <string name="menu_search_hint">搜索…</string>
    <string name="download">下载</string>
    <string name="install">安装</string>
    <string name="install_success">安装成功</string>
    <string name="install_failed">安装失败</string>
    <string name="auto_install">自动安装</string>
    <string name="installing">正在安装</string>
    <string name="install_apk_api">APK 文件安装方式</string>
    <string name="user_download_path">用户下载位置</string>
    <string name="download_thread_num">下载线程数</string>
    <string name="download_max_task_num">最大下载队列数</string>
    <string name="clean_download_dir">清除下载文件</string>
    <string name="clean_download_dir_desc">删除软件的下载缓存目录及该目录下的文件</string>
    <string name="auto_delete_file">安装完成后自动删除文件</string>
    <string name="auto_deleted_file">已自动删除安装文件</string>
    <string name="auto_dump_download_file">自动转储下载文件</string>
    <string name="enable">启用</string>
    <string name="save_successfully">保存成功</string>
    <string name="save_failed">保存失败</string>
    <string name="save_as_app">保存为单个更新项</string>
    <string name="main_program">主程序</string>
    <string name="click_to_add_something">按下加号添加应用/源吧</string>
    <string name="add_something">请先添加软件源或下载软件配置</string>
    <string name="navigation_drawer_open">开启侧滑菜单</string>
    <string name="navigation_drawer_close">关闭侧滑菜单</string>
    <string name="navigation_head_image">侧滑菜单背景图</string>
    <string name="clean_sort_log">清空当前分类的日志</string>
    <string name="clean_all_log">清空全部日志</string>
    <string name="clean_sort_log_alert_message">当前分类的日志将丢失</string>
    <string name="clean_all_log_alert_message">所有历史日志将丢失</string>
    <string name="export_all">全部导出</string>
    <string name="clean_log">清空日志</string>
    <string name="other">其他</string>
    <string name="background_image">背景图片</string>
    <string name="group_logo">分组图标</string>
    <string name="del_group">删除分组</string>
    <string name="apps_logo">软件图标</string>
    <string name="update_status_identifier">更新状态标识</string>
    <string name="nothing_in_there"><![CDATA[这里好像什么也没有(>﹏<)]]></string>
    <string name="end">到底啦</string>
    <string name="example_name">ExampleName</string>
    <string name="example_version_number">0.0.0</string>
    <string name="example_package_name">com.example.app</string>
    <string name="add_group">添加分组</string>
    <string name="add_hub">添加源</string>
    <string name="example_number">0</string>
    <string name="example_update_overview" formatted="false">%d 个应用中的 %d 个需要升级</string>
    <string name="update_status_prompt">升级提示符</string>
    <string name="waiting_check_update">检查更新中…</string>
    <string name="local_version_number">本地版本</string>
    <string name="arrow">箭头</string>
    <string name="update_info">更新数据</string>
    <string name="app_main_url">软件主页网址</string>
    <string name="example_app_url">www.example.com/com.example.app</string>
    <string name="example_changelog">This is a example changelog for example app.</string>
    <string name="latest_version_number">最新版本</string>
    <string name="cloud_version_number">云端版本</string>
    <string name="null_english">NULL</string>
    <string name="please_grant_storage_perm">请授予存储读写权限</string>
    <string name="more_other_version_number">更多版本</string>
    <string name="loading">加载中…</string>
    <string name="add_apps">添加应用</string>
    <string name="group_name">分组名称</string>
    <string name="auto_update_hub_config">自动更新软件源配置</string>
    <string name="auto_update_hub_config_desc">当进入云端配置页面时，检查从云端仓库下载的软件源，并当有新版本时自动更新软件源配置</string>
    <string name="auto_start_update">进入主页时自动更新数据</string>
    <string name="auto_update_app_config">自动更新跟踪项配置</string>
    <string name="auto_update_app_config_desc">当进入云端配置页面时，检查从云端仓库下载的跟踪项，并当有新版本时自动更新跟踪项配置</string>
    <string name="auto_update_setting">自动更新设置</string>
    <string name="enable_applications_mode">启动应用市场模式</string>
    <string name="enable_applications_mode_desc">应用将获取设备安装的所有应用信息，以从已启用的软件源中检测更新，其使用方式与一般的应用市场类似</string>
    <string name="detailed_help">\n详细帮助</string>
    <string name="readme_url">https://upgradeall.now.sh/</string>
    <string name="setting_app_hub_explain">软件源（必填）\n通过何种渠道获取更新信息</string>
    <string name="setting_app_name_explain">应用名称（选填）\n留空则调用软件源脚本，以获取默认应用名称</string>
    <string name="setting_app_url_explain">应用项目主页网址（必填）\n通过该网址获取应用信息</string>
    <string name="setting_app_versioning_explain">应用目标指向字符（必填）\n通过该字符串确认本地应用信息\n 例如：net.xzos.upgradeall\n 当选择的版本控制模块不为 Shell 时，\n 会开启搜索功能</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="split_line">--------------------------------------------------</string>
    <string name="whether_download_dependency_hub">是否下载缺失的依赖软件源</string>
    <string name="start_download_dependency_hub">开始下载缺失的依赖软件源</string>
    <string name="long_click_to_use_external_downloader">长按以使用外部下载器下载</string>
    <string name="download_pre">准备下载</string>
    <string name="download_start">开始下载</string>
    <string name="no_completion_results">无补全结果</string>
    <string name="no_root_and_restart_to_use_root">无 ROOT 权限 \n如果需使用，请给予本软件权限并重启本软件</string>
    <string name="version_number_is_marked_as_processed">版本号标注为已处理</string>
    <string name="mark_version_number">点击右上角菜单以进行版本标记</string>
    <string name="marked_version_number_is_behind_latest">标注已处理的版本号已落后于最新版本</string>
    <string name="auto_fixed_wrong_configuration">已自动修复错误配置</string>
    <string name="reset_git_url_configuration">已复原 Git 默认地址配置</string>
    <string name="reset_update_server_url_configuration">已复原升级服务默认地址配置</string>
    <string name="o_mark">⭕</string>
    <string name="processing">处理中</string>
    <string name="add_new_group">添加新分组</string>
    <string name="add_to_group">添加到分组</string>
    <string name="edit_group">修改分组</string>
    <string name="move_lift">向左移动</string>
    <string name="move_right">向右移动</string>
    <string name="export_current_sort_log">导出当前分类的日志</string>
    <string name="export_all_log">导出全部日志</string>
    <string name="applications">应用市场</string>
    <string name="add_applications">添加应用市场</string>
    <string name="add_single_app">添加单个跟踪项</string>
    <string name="android_app">Android 应用</string>
    <string name="shell">SHELL 命令</string>
    <string name="shell_root">ROOT 权限的 SHELL 命令</string>
    <string name="please_input_name">请填写名称</string>
    <string name="please_do_not_hide_all_bookmark_page">请勿隐藏所有标签页，这将导致您难以使用该软件</string>
    <string name="network_error">网络错误</string>
    <string name="failed_to_add">添加失败</string>
    <string name="long_click_to_delete_image">长按侧滑栏图片可以删除图片</string>
    <string name="save_file_successfully">文件保存成功</string>
    <string name="save_file_failed">文件保存失败</string>
    <string name="shizuku_permission_request">请给予本软件 Shizuku 权限</string>
    <string name="ucrop_error">uCrop 运行错误</string>
    <string name="copied_to_pasteboard">已复制到粘贴板</string>
    <string name="download_task_begin">下载任务开始</string>
    <string name="repeated_download_task">重复任务，忽略</string>
    <string name="select_browser">请选择浏览器以打开网页</string>
    <string name="system_browser_error">你可能遇到了一个系统错误，正在尝试调用其他方法打开</string>
    <string name="function_unsupported_error">你的手机暂不支持该功能</string>
    <string name="please_input_custom_url">请输入自定义网址</string>
    <string name="same_as_server_config">跟随服务器配置</string>
    <string name="ignore_app">永久忽略更新</string>
    <string name="remove_ignore_app">取消忽略该跟踪项的更新</string>
    <string name="ignore_version">标记当前版本号</string>
    <string name="remove_ignore_version">取消标记该跟踪项的当前版本号</string>
    <string name="local_backup">本地备份</string>
    <string name="backup_to_file">备份为本地文件</string>
    <string name="restore_from_file">从本地文件恢复</string>
    <string name="cloud_backup">云端备份</string>
    <string name="backup_to_webdav">备份到 WebDAV</string>
    <string name="restore_from_webdav">从 WebDAV 恢复</string>
    <string name="webdav_path">WebDAV 存储目录</string>
    <string name="webdav_path_desc">请确保 WebDAV 下存在目录</string>
    <string name="webdav_url">WebDAV 网址</string>
    <string name="webdav_username">WebDAV 帐号</string>
    <string name="webdav_password">WebDAV 密码</string>
    <string name="plz_set_webdav">请设置 WebDAV</string>
    <string name="restore_running">正在恢复</string>
    <string name="restore_stop">恢复完成</string>
    <string name="backup_running">正在备份</string>
    <string name="backup_stop">备份完成</string>
    <string name="dialog_title_select_download_item">选择下载项</string>
    <string name="btn_add_extra">添加附加项</string>
    <string name="ui">界面</string>
    <string name="enable_bottom_sheet">平铺菜单按钮</string>
    <string name="enable_simple_bottom_main">在主页以简略图标显示按钮</string>
    <string name="language">语言</string>
    <string name="custom_language">自定义语言</string>
    <string name="follow_server_config">跟随服务器配置</string>
    <string name="custom">自定义</string>
    <string name="system_installer">系统默认安装器</string>
    <string name="plz_restart">请重启应用</string>
    <string name="download_auto_retry_max_attempts">下载任务重试次数</string>
    <string name="built_in_downloader_setting">内置下载器设置</string>
    <string name="external_downloader_setting">外置下载器设置</string>
    <string name="external_downloader_package_name">外置下载器包名</string>
    <string name="use_external_downloader">强制使用外置下载器</string>
    <string name="home_checking_updates">正在检查更新…</string>
    <string name="home_check_updates">检查更新</string>
    <string name="home_module_discovery">探索</string>
    <string name="home_module_file_management">文件管理</string>
    <string name="home_module_apps">应用</string>
    <string name="home_module_magisk_module">Magisk 模块</string>
    <string name="home_module_rss">RSS</string>
    <string name="home_module_others">其它</string>
    <string name="home_format_items_need_update">共 %d 个跟踪项需要更新</string>
    <string name="home_log">日志</string>
    <string name="home_settings">设置</string>
    <string name="home_about">关于</string>
    <string name="force_renew">强制刷新</string>
    <string name="hub_tab_updates">更新</string>
    <string name="hub_tab_all">全部</string>
    <string name="hub_tab_ignored">已忽略</string>
    <string name="hub_tooltip_priority">优先级</string>
    <string name="hub_format_app_update_tip">共 %d 个应用更新</string>
    <string name="hub_update_all">全部升级</string>
    <string name="hub_ignore_all">全部忽略</string>
    <string name="num_zero">0</string>
    <string name="percent_temp">d %</string>
    <string name="key">键</string>
    <string name="value">值</string>
    <string name="open_list">展开列表</string>
    <string name="save_as">另存</string>
</resources>