<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:entries="@array/cloud_hub_api_string"
        android:entryValues="@array/cloud_hub_api"
        app:key="custom_cloud_rules_hub_url"
        app:persistent="true"
        app:title="@string/cloud_rules_repo_url" />

    <EditTextPreference
        android:defaultValue="@string/default_update_server_url"
        app:key="update_server_url"
        app:title="@string/update_server_url"
        app:useSimpleSummaryProvider="true" />

    <SeekBarPreference
        android:defaultValue="18"
        android:max="16"
        android:summary="@string/background_sync_time_desc"
        app:key="background_sync_time"
        app:showSeekBarValue="true"
        app:title="@string/background_sync_time" />
</androidx.preference.PreferenceScreen>
