<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:defaultValue="System"
        android:entries="@array/install_apk_api_string"
        android:entryValues="@array/install_apk_api"
        android:key="install_apk_api"
        android:title="@string/install_apk_api" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        app:key="auto_install"
        app:title="@string/auto_install" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        app:key="auto_delete_file"
        app:title="@string/auto_delete_file" />
</androidx.preference.PreferenceScreen>
