<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="item"
            type="net.xzos.upgradeall.ui.detail.setting.attrlist.AttrListItemView" />

        <variable
            name="handler"
            type="net.xzos.upgradeall.ui.detail.setting.attrlist.AttrListHandler" />
    </data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:endIconCheckable="true"
            app:endIconContentDescription="@string/open_list"
            app:endIconMode="dropdown_menu">

            <AutoCompleteTextView
                android:id="@+id/key_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/key"
                android:inputType="text"
                android:text="@={item.key}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/value"
            app:endIconCheckable="true"
            app:endIconContentDescription="@string/help"
            app:endIconDrawable="@drawable/ic_help"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/value_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@={item.value}" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/delete"
            android:onClick="@{() -> handler.deleteItem(item)}"
            app:srcCompat="@drawable/ic_delete" />

    </LinearLayout>
</layout>