<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="16dp">

    <ImageButton
        android:id="@+id/btn_log"
        android:layout_width="@dimen/icon_size_default"
        android:layout_height="@dimen/icon_size_default"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/home_log"
        android:src="@drawable/ic_home_log"
        android:tint="?attr/colorControlNormal" />

    <ImageButton
        android:id="@+id/btn_settings"
        android:layout_width="@dimen/icon_size_default"
        android:layout_height="@dimen/icon_size_default"
        android:layout_marginStart="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/home_settings"
        android:src="@drawable/ic_home_setting"
        android:tint="?attr/colorControlNormal" />

    <ImageButton
        android:id="@+id/btn_about"
        android:layout_width="@dimen/icon_size_default"
        android:layout_height="@dimen/icon_size_default"
        android:layout_marginStart="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/home_about"
        android:src="@drawable/ic_home_about"
        android:tint="?attr/colorControlNormal" />

</LinearLayout>